style: fixes on small screens

--- a/src/browser/components/JobDescription.styl
+++ b/src/browser/components/JobDescription.styl
@@ -23,3 +23,5 @@
   .job
     h1
       font-size 2em
+    li
+      margin 8px 0 8px 0
