--- a/src/browser/screens/Equipment.styl
+++ b/src/browser/screens/Equipment.styl
@@ -84,7 +84,7 @@
     .options
       .option
         p
-          font-size 12px
+          font-size 14px
 
 @media screen and (max-width: 420px)
   .equipment-screen
@@ -97,3 +97,9 @@
       .option
         p
           display none
+
+@media (max-width: 767px)
+ .screen .content ul li {
+    line-height: initial;
+    padding: 8px;
+}
