--- a/src/browser/screens/Skills.styl
+++ b/src/browser/screens/Skills.styl
@@ -61,7 +61,7 @@
         transition .2s ease-in-out
 
     li
-      margin-bottom 20px
+      margin-bottom 30px
       position relative
       display flex
       justify-content flex-start
